Fixed user and account controller and fixed the postgres persistance. Also added test cases for user and account functionality